--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^4.0.0
+  mobkit_dashed_border: ^0.0.6
 
 flutter:
   uses-material-design: true
