--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,11 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: 0.19.0
+  intl: ^0.19.0
   table_calendar: ^3.1.2
+  get_it: ^7.7.0
+  injectable: ^2.4.4
+  build_runner: ^2.4.12
 
 dev_dependencies:
   flutter_test:
@@ -23,6 +26,7 @@ dev_dependencies:
 
   flutter_lints: ^4.0.0
   mobkit_dashed_border: ^0.0.6
+  injectable_generator: ^2.6.2
 
 flutter:
   uses-material-design: true
