--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   intl: ^0.19.0
   table_calendar: ^3.1.2
   auto_injector: ^2.0.5
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
