--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   uuid: ^4.5.1
   firebase_core: ^3.6.0
   flutter_dotenv: ^5.2.1
+  firebase_auth: ^5.3.1
 
 dev_dependencies:
   flutter_test:
