--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -9,9 +9,18 @@ plugins {
 }
 
 android {
-    namespace = "com.example.urgent_daily"
+    namespace = "com.abelli.urgentdaily"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
+    flavorDimensions += "app"
+
+    productFlavors {
+        dev {
+            applicationId = namespace
+            dimension = "app"
+            versionNameSuffix = "-dev"
+        }
+    }
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
@@ -24,10 +33,10 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.urgent_daily"
+        applicationId = namespace
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
+        minSdk = 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
