--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,11 @@ dependencies:
   table_calendar: ^3.1.2
   auto_injector: ^2.0.5
   uuid: ^4.5.1
-  firebase_core: ^3.6.0
+  firebase_core: ^3.8.0
   flutter_dotenv: ^5.2.1
-  firebase_auth: ^5.3.1
+  firebase_auth: ^5.3.3
+  google_sign_in: ^6.2.2
+  google_sign_in_web: ^0.12.4+3
 
 dev_dependencies:
   flutter_test:
