--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,9 +3,9 @@
     "short_name": "urgent_daily",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#F7EFFF",
+    "theme_color": "#FF8fd14f",
+    "description": "Your Daily Urgency organized!",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
