--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,7 +1,12 @@
+include: package:flutter_lints/flutter.yaml
+
 analyzer:
+  language:
+    #strict-casts: true
+    #strict-inference: true
+    #strict-raw-types: true
   errors:
     depend_on_referenced_packages: ignore
-include: package:flutter_lints/flutter.yaml
 
 linter:
   rules:
