Adding timeout to debug Auth connection

--- a/sample.env
+++ b/sample.env
@@ -9,4 +9,6 @@ android_apiKey='',
 android_appId='',
 ios_apiKey='',
 ios_appId='',
-iosBundleId=''
+iosBundleId='',
+firebase_auth_ip=,
+firebase_auth_port=
