--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "urgent_daily",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#F7EFFF",
-    "theme_color": "#FF8fd14f",
+    "background_color": "#8fd14f",
+    "theme_color": "#8fd14f",
     "description": "Your Daily Urgency organized!",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
