--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   firebase_core: ^3.8.0
   flutter_dotenv: ^5.2.1
   firebase_auth: ^5.3.3
+  cloud_firestore: ^5.6.6
   google_sign_in: ^6.2.2
   google_sign_in_web: ^0.12.4+3
 
@@ -28,7 +29,11 @@ dependencies:
     path: "../abelliz_essentials"
 
   mobkit_dashed_border: any
+  firebase_app_check: ^0.3.2+5
+
 dev_dependencies:
+  flutter_launcher_icons: ^0.14.3
+
   flutter_flavorizr: ^2.2.3
   flutter_test:
     sdk: flutter
@@ -45,6 +50,17 @@ flutter:
     # Add assets from the images directory to the application.
     - assets/images/
     - .env
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo.png"
+  min_sdk_android: 21
+  web:
+    generate: true
+    image_path: "assets/logo.png"
+    background_color: "#8fd14f"
+    theme_color: "#8fd14f"
 
 flavorizr:
   app:
