Adding new property to .env and AppCheck to main

--- a/sample.env
+++ b/sample.env
@@ -10,5 +10,7 @@ android_appId='',
 ios_apiKey='',
 ios_appId='',
 iosBundleId='',
-firebase_auth_ip=,
-firebase_auth_port=
+is_offline='false',
+firebase_emulator_host='127.0.0.1',
+firebase_auth_port='9099',
+firebase_firestore_port='8080'
